--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,22 @@
 version: 2
 jobs:
-  build:
+  one:
     docker:
       - image: circleci/python:3.7.1
     steps:
       - checkout
       - run: echo "Hello worl"
-  build:
+      - run: sleep 25
+  two:
     docker:
       - iamge: circleci/python:3.7.1
     steps:
       - checkout
       - run: echo "Hello world"
+      - run:sleep 15
+  workflows:
+    version: 2
+    one_and_two:
+      jobs:
+        - two
+        - 
