--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,8 @@ jobs:
       - run: echo "Hello worl"
       - run: sleep 25
   two:
+    docker:
+      -image: circleci/ruby:2.4.1
     steps:
       - checkout
       - run: echo "Hello world"
