--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,21 +2,21 @@ version: 2
 jobs:
   one:
     docker:
-      - image: circleci/python:3.7.1
+      - image: circleci/ruby:2.4.1
     steps:
       - checkout
-      - run: echo "Hello worl"
+      - run: echo "A first hello"
       - run: sleep 25
   two:
     docker:
-      -image: circleci/ruby:2.4.1
+      - image: circleci/ruby:2.4.1
     steps:
       - checkout
-      - run: echo "Hello world"
+      - run: echo "A more familiar hi"
       - run: sleep 15
 workflows:
-    version: 2
-    one_and_two:
-      jobs:
-        - one
-        - two
+  version: 2
+  one_and_two:
+    jobs:
+      - one
+      - two
